--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Cadastro</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="cadastro.css">
 </head>
 <body>
     <div class="container">
