--- a/cadastro.html
+++ b/cadastro.html
@@ -1,37 +1,80 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela de Cadastro</title>
-    <link rel="stylesheet" href="cadastro.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Cadastro</title>
+  <link rel="stylesheet" href="cadastro.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Cadastro de Usuário</h2>
-        <form action="#" method="POST">
-            <div class="input-group">
-                <label for="nome">Nome</label>
-                <input type="text" id="nome" name="nome" required>
-            </div>
+  <div class="container">
+    <h1>CADASTRO</h1>
 
-            <div class="input-group">
-                <label for="email">E-mail</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-
-            <div class="input-group">
-                <label for="senha">Senha</label>
-                <input type="password" id="senha" name="senha" required>
-            </div>
-
-            <div class="input-group">
-                <label for="confirmar_senha">Confirmar Senha</label>
-                <input type="password" id="confirmar_senha" name="confirmar_senha" required>
-            </div>
-
-            <button type="submit" class="btn-cadastro">Cadastrar</button>
-        </form>
+    <div class="social-login">
+      <button class="icon-btn"><i class="fas fa-envelope"></i></button>
+      <button class="icon-btn"><i class="fab fa-facebook-f"></i></button>
     </div>
+
+    <form>
+      <div class="photo-upload">
+        <label for="foto">
+          <img src="https://via.placeholder.com/100" alt="Foto de perfil" id="preview">
+          <input type="file" id="foto" accept="image/*">
+        </label>
+      </div>
+
+      <div class="form-group">
+        <i class="fas fa-user"></i>
+        <input type="text" placeholder="Usuário" required>
+      </div>
+
+      <div class="form-group">
+        <i class="fas fa-envelope"></i>
+        <input type="email" placeholder="example@gmail.com" required>
+      </div>
+
+      <div class="gender-group">
+        <label><input type="radio" name="genero" value="masculino"> ♂</label>
+        <label><input type="radio" name="genero" value="feminino"> ♀</label>
+        <label><input type="radio" name="genero" value="outro"> OUTRO</label>
+      </div>
+
+      <div class="form-group password-group">
+        <i class="fas fa-lock"></i>
+        <input type="password" id="senha" placeholder="Senha" required>
+        <i class="fas fa-eye toggle-password" onclick="toggleSenha()"></i>
+      </div>
+
+      <button type="submit" class="btn">CADASTRAR</button>
+    </form>
+  </div>
+
+  <script>
+    // Pré-visualização da imagem
+    document.getElementById("foto").addEventListener("change", function () {
+      const file = this.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          document.getElementById("preview").src = e.target.result;
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+
+    // Mostrar/ocultar senha
+    function toggleSenha() {
+      const senha = document.getElementById("senha");
+      const icon = document.querySelector(".toggle-password");
+      if (senha.type === "password") {
+        senha.type = "text";
+        icon.classList.replace("fa-eye", "fa-eye-slash");
+      } else {
+        senha.type = "password";
+        icon.classList.replace("fa-eye-slash", "fa-eye");
+      }
+    }
+  </script>
 </body>
 </html>
